# scraper-app

./: .gitignore  Cargo.toml  README.md  build.rs  scraper-app.example.json
src/: bot.rs  config.rs  error.rs  main.rs  processor.rs  utils.rs
src/diagnostics/: chat_diagnostic.rs  config_diagnostic.rs  dialog_diagnostic.rs  mod.rs  progress_diagnostic.rs
src/test/: fetch_test.rs  mod.rs  parse_test.rs  telegram_test.rs
